<resources>
    <string name="app_name">ProofOfVisitClient</string>
    <string name="action_wallet_manager">Wallet-Manager</string>
    <string name="action_generate_qr">Generate QR-Code</string>
    <string name="action_view_token_list">View Token list</string>
    <string name="tv_wallet_manager">No wallets detected.</string>
    <string name="tv_info_text_add_wallet">Passwords are not simular.</string>
    <string name="tv_info_text_no_wallet_selected">No wallet selected.</string>
    <string name="tv_info_text_no_tokens">Currently no tokens to view.</string>
    <string name="btn_create_wallet">Create Wallet</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">Go back</string>
    <string name="btn_try_again">Try again</string>
    <string name="btn_unlock_wallet">Unlock</string>
    <string name="hint_enter_pw">Enter password</string>
    <string name="hint_repeat_pw">Repeat password</string>
</resources>
